# StreamDockForLinux

./: .editorconfig  .gitignore  .pylintrc  CONFIGURATION_ACTIONS.md  DEVELOPMENT.md  LICENSE  README.md  TROUBLESHOOTING.md  config.yml.example  pyproject.toml  requirements-dev.txt  requirements.txt
.agent/: TEST_GATE.md  instructions.md
.agent/rules/: deployment-safety.md  style-guide.md  testing-standards.md
.agent/workflows/: bug-fix.md  documentation-audit.md  feature-development.md  refactoring.md  test-gate.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_request.md
docs/: QA_PLAYBOOK.md  actions_reference.md  configuration.md  device_setup.md  installation.md  troubleshooting.md
docs/architecture/: AGENT_KNOWLEDGE_BASE.md  AUTONOMOUS_DETECTION_SYSTEM.md  CLEANUP_ROADMAP.md  COUPLING_DIAGRAM.md  DEPENDENCY_MAP.md  DOCUMENTATION_IMPROVEMENT_TODO.md  GLOSSARY.md  KWIN_OPTIMIZATION_MASTER_PLAN.md  LAYERED_ARCHITECTURE_DESIGN.md  MIGRATION_GUIDE.md
docs/feature_proposals/: code_cleanup.md  layered_architecture_migration.md
docs/recipes/: basic_launcher.md  media_control.md  productivity.md
docs/testing/: COVERAGE_REQUIREMENTS.md  (+2 more)
scripts/: run_config_editor.sh  simulate_window.py
src/: main.py  main_new.py
tests/: repro_duplicate_key.yml  test_actions.py  test_concurrency.py  test_config_loader.py  test_device_manager.py  test_issue_change_key.py  test_key.py  test_layout.py  test_lock_monitor.py  test_lock_monitor_hotplug.py  test_lock_monitor_reconnect.py  test_simulation_mode.py  test_stream_dock.py  test_strict_naming.py  test_virtual_keyboard.py  test_window_detection.py  test_window_monitor.py  test_window_utils.py
(+111 files in other folders)
